# hyper_processor

./: README.md  evil.c  main.c
hyper_processor/: .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  QUICKSTART.md  README.md  REALTIME-MONITORING.md  ROADMAP.md  demo.sh  evil.c  generated_from_learning.yaml  hyper-rasp-monitor.service  install.sh  monitor-realtime.sh  monitor.sh  protect-app.sh  rasp-daemon.sh  rasp_config.yaml  run_tests.sh  test_learn.yaml  test_whitelist.yaml
hyper_processor/scripts/: build-ebpf.sh
hyper_processor/src/: config.rs  learning.rs  lib.rs  metrics.rs
hyper_processor/src/core/: mod.rs
hyper_processor/src/ebpf/: mod.rs
hyper_processor/src/preload_check/: mod.rs
hyper_processor_ebpf/: Cargo.toml
hyper_processor_ebpf/src/: main.rs
